--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
       href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
   </head>
 
