--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="stylesByMe.css" />
   </head>
 
   <body>
